added new file sheets.css and link at page1.html

--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>my_title</title>
+		<link rel="stylesheet" href="./sheets.css">
 	</head>	
 	<body>
 		<h1>Is Danyil a fag?</h1>
