TEST COMMIT WITH COMMENTS
first coment
second coment

--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="./sheets.css">
 	</head>	
 	<body>
-		<h1>Is Danyil a fag?</h1>
+		<div>Is Danyil a fag?</div>
 		<p>Hello world!</p>
 	
 	</body>
